Corrected bug: buttons not centered in search results

--- a/app/static/css/buttons.css
+++ b/app/static/css/buttons.css
@@ -36,6 +36,7 @@ table.dual {
 }
 
 .dual .left {
+    width: 50%;
 	padding: 0;
     padding-right: 5px;
     text-align: right;
@@ -43,6 +44,7 @@ table.dual {
 }
 
 .dual .right {
+    width: 50%;
 	padding: 0;
     padding-left: 5px;
     text-align: left;
